src/tests/fail/conn_handler_too_short.stderr
warning: unused import: `StreamError`
 --> $DIR/conn_handler_too_short.rs:1:56
  |
1 | use libstrophe::{Connection, ConnectionEvent, Context, StreamError};
  |                                                        ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0597]: `handler` does not live long enough
 --> $DIR/conn_handler_too_short.rs:7:35
  |
7 |         conn.connect_client(None, None, &handler).unwrap()
  |         --------------------------------^^^^^^^^----------
  |         |                               |
  |         |                               borrowed value does not live long enough
  |         a temporary with access to the borrow is created here ...
8 |     };
  |     -- ... and the borrow might be used here, when that temporary is dropped and runs the `Drop` code for type `libstrophe::context::Context`
  |     |
  |     `handler` dropped here while still borrowed
  |
  = note: The temporary is part of an expression at the end of a block. Consider adding semicolon after the expression so its temporaries are dropped sooner, before the local variables declared by the block are dropped.
